Try adding parallax in background (fail)

--- a/deepdub_frontend/echo/src/pages/home.css
+++ b/deepdub_frontend/echo/src/pages/home.css
@@ -22,6 +22,15 @@
 	/* cursor: pointer; */
   }
   
+
+  #particles-js, #parallax, .layer, .some-space, .some-more-space {
+	height: 100%;
+	position: absolute;
+	width: 100%;
+  }
+
+
+
   
 
 /* Header */
